Configuração para deploy em produção

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=
+spring.datasource.url=mysql://b3a85f180eb34a:39f1ff79@us-cdbr-east-03.cleardb.com/heroku_515c1cffbed094d?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
