--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=
+spring.datasource.url=jdbc:mysql://localhost:3306/site?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -7,8 +7,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=contatodigitedigital@gmail.com
-spring.mail.password=arfeu1231
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
