--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 default.sender=contatodigitedigital@gmail.com
 default.recipient=contatodigitedigital@gmail.com
