--- a/src/a Principal/Recursos/application-prod.properties
+++ b/src/a Principal/Recursos/application-prod.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.format_sql=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=contatodigitedigital@gmail.com
-spring.mail.password=arfeu1231
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
